# mobilproje

./: .env  .env.example  CLAUDE.md  CYTHON_MIGRATION_PLAN.md  DOCKER_BUILD_GUIDE.md  Dockerfile  README.md  alembic.ini  build-docker.sh  build_cython.sh  config.md  dia_api_documentation.md  dia_web_service_api_detayli_dokumantasyon.md  docker-compose.override.example.yml  docker-compose.yml  info.md  pyproject.toml  requirements-base.txt  requirements-database.txt  requirements-dev.txt  requirements-sap-rest.txt  requirements.txt  setup_cython.py
.claude/agents/: code-best-practices-reviewer.md  web-docs-analyzer.md
.github/workflows/: ci.yml
alembic/: env.py
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml  prometheus.yml
docs/dia/: DIA_Integration_Requirements.md  DIA_Models_Database_Analysis.md  DIA_WebService_API_Analysis.md
migrations/: create_dia_tables.sql
requirements/: base.txt  dev.txt  prod.txt
scripts/: benchmark_cython.py  init_db.sql  setup_dev.sh
src/: config.py  database.py  main.py
src/api/v1/: auth.py  dia.py  health.py  integrations.py  tenants.py  webhooks.py
src/core/: security.py  tenant.py
src/erp_platform/: __init__.py  main.py
src/erp_platform/api/: __init__.py
src/erp_platform/api/v1/: __init__.py  connectors.py  health.py  processors.py  tasks.py
src/erp_platform/connectors/: __init__.py  base.py  oracle.py  pool.py  sap.py  sap_rest.py  sqlserver.py
src/erp_platform/core/: __init__.py  config.py  logging.py  telemetry.py
src/erp_platform/cython_modules/: __init__.py  csv_processor_cy.pyx  json_processor_cy.pyx  math_utils_cy.pyx  sap_transformer_cy.pyx  string_utils_cy.pyx
src/erp_platform/processors/: __init__.py  csv_processor.py  json_processor.py  polars_processor.py
src/erp_platform/tasks/: celery_app.py  connector_tasks.py  processing_tasks.py
src/integrations/: base_connector.py
src/integrations/dia/: __init__.py  config.py  connector.py  models.py  services.py
src/integrations/netgsm/: connector.py
src/models/: base.py  tenant.py
src/services/: kvkk_service.py  tenant_service.py
src/utils/: monitoring.py  turkish.py
src/workers/: kafka_consumer.py
